<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.vlingo</groupId>
  <artifactId>vlingo-actors</artifactId>
  <version>0.7.9</version>
  <name>vlingo-actors</name>
  <description>Type safe Actor Model toolkit for reactive concurrency and resiliency using Java and other JVM languages.</description>
  <url>https://github.com/vlingo/vlingo-actors</url>
  <licenses>
    <license>
      <name>Mozilla Public License 2.0</name>
      <url>https://mozilla.org/MPL/2.0/</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Vaughn Vernon</name>
      <email>vaughn@kalele.io</email>
      <organization>Kalele</organization>
      <organizationUrl>http://kalele.io</organizationUrl>
    </developer>
    <developer>
      <name>Dmitry Ledentsov</name>
      <email>dmlled@yahoo.com</email>
      <organization>Dmitry Ledentsov</organization>
      <organizationUrl>https://github.com/d-led</organizationUrl>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git://github.com/vlingo/vlingo-actors.git</connection>
    <developerConnection>scm:git:ssh://github.com/vlingo/vlingo-actors.git</developerConnection>
    <url>http://github.com/vlingo/vlingo-actors/tree/master</url>
  </scm>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.21.0</version>
        <configuration>
          <systemPropertyVariables>
            <propertyName>firefox</propertyName>
          </systemPropertyVariables>
          <argLine>-Xmx1024m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.10.19</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.agrona</groupId>
      <artifactId>agrona</artifactId>
      <version>0.9.20</version>
    </dependency>
    <dependency>
      <groupId>io.vlingo</groupId>
      <artifactId>vlingo-common</artifactId>
      <version>0.7.9</version>
    </dependency>
  </dependencies>
  <distributionManagement>
    <repository>
      <id>bintray-vlingo-vlingo-platform-java</id>
      <name>vlingo-vlingo-platform-java</name>
      <url>https://api.bintray.com/maven/vlingo/vlingo-platform-java/vlingo-actors/;publish=1</url>
    </repository>
  </distributionManagement>
</project>
